@@ -1,0 +1,4 @@
+explain [[using foo : maybe_unused]] int i
+          ^
+11: warning: "using" in attributes not supported (ignoring)
+declare i as maybe-unused int
