@@ -41,6 +41,7 @@ The characters are:
 + `a_mu_` = `maybe_unused`
 + `a_nd_` = `nodiscard`
 + `a_nua_` = `no_unique_address`
++ `a_using_` = attribute with `using`
 + `al` = `_Alignas` or `alignas`
 + `at` = `_Atomic` or `atomic`
 + `b` = block (Apple extension) or `bool`
