@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain [[using foo : maybe_unused]] int i @ 0
